cleanup and renames
Conflicts:
	api/settings.html

--- a/settings.html
+++ b/settings.html
@@ -6,7 +6,7 @@ found in the LICENSE file.
 
 <!DOCTYPE html>
 <head>
-  <title>Settings App</title>
+  <title>RPG Stats 2000</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <style>
