--- a/ui/cs-control.html
+++ b/ui/cs-control.html
@@ -4,7 +4,7 @@ Use of this source code is governed by a BSD-style license that can be
 found in the LICENSE file.
 -->
 
-<link rel="import" href="../api/settings.html">
+<link rel="import" href="../model/controls.html">
 <link rel="import" href="cs-control-checkbox.html">
 <link rel="import" href="cs-control-dropdown.html">
 <link rel="import" href="cs-control-iq.html">
@@ -14,7 +14,6 @@ found in the LICENSE file.
 <polymer-element name="cs-control" attributes="model">
   <template>
     <template bind="{{ model as m }}">
-
       <!-- Container for injecting custom elements. -->
       <div id="container"></div>
 
