--- a/ui/cs-settings.html
+++ b/ui/cs-settings.html
@@ -5,12 +5,13 @@ found in the LICENSE file.
 -->
 
 <link rel="import" href="../api/settings-api.html">
+<link rel="import" href="../api/settings.html">
 <link rel="import" href="../bower_components/core-drawer-panel/core-drawer-panel.html">
 <link rel="import" href="../bower_components/core-header-panel/core-header-panel.html">
 <link rel="import" href="../bower_components/core-icon-button/core-icon-button.html">
 <link rel="import" href="../bower_components/core-toolbar/core-toolbar.html">
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
-<link rel="import" href="../model/cs-controls.html">
+<link rel="import" href="../model/controls.html">
 <link rel="import" href="cs-grouped-menu.html">
 <link rel="import" href="cs-intro.html">
 <link rel="import" href="cs-results-page.html">
