--- a/model/initial-controls.html
+++ b/model/initial-controls.html
@@ -24,7 +24,7 @@ found in the LICENSE file.
         },
         ], [{
           id: 'build',
-          label: 'Body',
+          label: 'Build',
           icon: 'accessibility',
         }, {
           id: 'features',
