--- a/settings.html
+++ b/settings.html
@@ -21,6 +21,7 @@ found in the LICENSE file.
       cursor: default;
     }
   </style>
+  <link rel="import" href="api/observe-js.html">
   <link rel="import" href="bower_components/font-roboto/roboto.html">
   <link rel="import" href="ui/cs-settings.html">
 </head>
